# visual-glow

./: .gitignore  CMakeLists.txt  README.md
core/: camera.cpp  camera.h  configuration.h  editor.cpp  editor.h  logging.h  png_video_encoder.cpp  png_video_encoder.h  project.cpp  project.h  renderer.cpp  renderer.h
core/fractal_engine/: fractal.h  y2k_fractal.cpp  y2k_fractal.h
core/opengl/: opengl_index_buffer.h  opengl_vertex_array_buffer.cpp  opengl_vertex_array_buffer.h  opengl_vertex_buffer.cpp
core/opengl/shaders/: opengl_shader_program.cpp
engine/: camera.cpp  camera.h  editor.cpp  editor.h  logging.h  vengine.cpp  vengine.h
engine/fractals/: discrete_fractal.cpp  discrete_fractal.h  fractal.h
engine/opengl/: opengl_index_buffer.cpp  opengl_vertex_buffer.h
engine/opengl/shaders/: opengl_shader_program.cpp  opengl_shader_program.h
main/: main.cpp
src/: main.cpp
src/core/: constants.h  display_window.cpp  display_window.h  parameters.h  window.cpp  window.h  window_configuration.h
src/imgui/: GL_IMGUI.cpp  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  imgui_internal.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
src/renderer/: camera.cpp  camera.h  renderer_context.h
src/renderer/fractals/: discrete_fractal.cpp  discrete_fractal.h  fractal.h
src/renderer/opengl/: index_buffer.cpp  index_buffer.h  opengl_context.cpp  opengl_context.h  vertex_array_buffer.cpp  vertex_array_buffer.h  vertex_buffer.cpp  vertex_buffer.h
src/renderer/opengl/gui/: opengl_imgui.cpp  opengl_imgui.h
src/renderer/opengl/shaders/: shader_program.cpp  shader_program.h
